--- a/Capstone_Project_Part 1.ipynb
+++ b/Capstone_Project_Part 1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Capstone Part 1"
+    "## this notebook will be mainly used for the capstone project"
    ]
   },
   {
